# generic-parameterize

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cargo-test-publish.yaml
src/: arguments.rs  extract.rs  lib.rs  params.rs
tests/: test_macros.rs
