[package]
name = "generic_parameterize"
version = "0.0.0"
authors = ["Andrew Cassidy <drewcassidy@me.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0.43"
syn = { version = "1.0", features = ["full"] }
itertools = "0.10.3"

