[package]
name = "generic_parameterize"
version = "0.1.0"
repository = "https://github.com/drewcassidy/generic-parameterize"
authors = ["Andrew Cassidy <drewcassidy@me.com>"]
description = "A test parameterization macro that works on generic arguments"
keywords = ["template", "proc_macro", "procmacro", "test", "parameterize", "generic"]
categories = ["development-tools::testing"]
license = "MPL-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0.43"
syn = { version = "1.0", features = ["full"] }
itertools = "0.10.3"

