[package]
name = "generic_parameterize"
version = "0.2.2"
repository = "https://github.com/drewcassidy/generic-parameterize"
authors = ["Andrew Cassidy <drewcassidy@me.com>"]
description = "A test parameterization macro that works on generic arguments"
keywords = ["proc_macro", "test", "parameterize", "generic"]
categories = ["development-tools::testing"]
license = "MPL-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0.43"
syn = { version = "2.0.17", features = ["full", "extra-traits"] }
itertools = "0.13"
strum = { version = "0.26.2", features = ["derive"] }

